--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -40,7 +40,7 @@
       <%# //Back to listing link %>
 
       <%# Store details %>
-      <div class="stores-maps__list-detail">
+      <div class="stores-maps__list-detail js-dynamic-height">
 
         <article class="storefront" role="article">
 
@@ -207,25 +207,6 @@
             });
 
           }
-          (function() {
-            function toggleStoreDetailHeight() {
-              if ($('.js-store-hours-toggle-target').hasClass('is-active')) {
-                $('.js-store-hours-toggle-container').addClass('is-store-hours-visible');
-              } else {
-                $('.js-store-hours-toggle-container').removeClass('is-store-hours-visible');
-              }
-            }
-
-            $('.js-store-hours-toggle-trigger').click(toggleStoreDetailHeight);
-
-            // Escape key will trigger check for store detail container height
-            $(document).bind( 'keydown', function ( event ) {
-              if ( event.keyCode == 27 ) {
-                toggleStoreDetailHeight();
-              }
-            });
-
-          })();
         }
       </script>
 
