Add itemprop=image to relevant Microdata

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -30,7 +30,8 @@
         alt: "",
         width: 638,
         crop: :limit,
-        format: :auto
+        format: :auto,
+        itemprop: :image
       %>
     </section>
     <%# //Event image %>
