--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -6,7 +6,8 @@
     width: 289,
     alt: "",
     crop: :limit,
-    format: :auto
+    format: :auto,
+    itemprop: :image
   %>
 </div>
 <%# //Tile event image %>
