--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -50,7 +50,7 @@
             <%# Movie tile image %>
             <div class="tile__image">
               <% if movie.cloudinary_public_id %>
-                <%= cl_image_tag(movie.cloudinary_public_id, alt: '', quality: 35, width: 578, crop: 'limit', format: 'jpg', fetch_format: 'auto') %>
+                <%= cl_image_tag(movie.cloudinary_public_id, alt: '', quality: 35, width: 578, crop: 'limit', format: 'jpg', fetch_format: 'auto', itemprop: 'image') %>
               <% else %>
                 <%= image_tag 'placeholder-movie.png', alt: '', fetch_format: 'auto' %>
               <% end %>
