Changing HTML comment to Ruby comment

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -407,7 +407,7 @@
 
 <div class="ng-cloak filters js-disabled-hide">
 
-  <!-- ProductBrowseView will be rendered within here -->
+  <%# ProductBrowseView will be rendered within here %>
   <div ng-view></div>
 </div>
 
