Remove all trace of

--- a/app/views/shared/social_share/_social_share.html.erb
+++ b/app/views/shared/social_share/_social_share.html.erb
@@ -12,7 +12,7 @@
 
     <%# Button text %>
     <span class="icon icon--share icon--lrg icon--spacing-lrg hide-when-visible" aria-hidden="true"></span><!--
-    --><span class="drop-down-container__non-active social-share__trigger__txt hide-when-visible">Share</span><!--
+    --><span class="social-share__trigger__txt hide-when-visible">Share</span><!--
     --><span class="icon icon--close-lrg icon--lrg icon--spacing-lrg show-when-visible show-when-visible--inline-block" aria-hidden="true"></span><!--
     --><span class="social-share__trigger__txt show-when-visible show-when-visible--inline-block">Close</span>
     <%# //Button text %>
