--- a/app/views/styleguide/modules/_tile.html.erb
+++ b/app/views/styleguide/modules/_tile.html.erb
@@ -28,10 +28,10 @@
           <span class="preloader__spinner"></span>
           <em>Loading…</em>
         </span>
-        <span class="icon icon--share icon--lrg icon--spacing-lrg drop-down-container__non-active" aria-hidden="true"></span><!--
-        --><span class="drop-down-container__non-active social-share__trigger__txt">Share</span><!--
-        --><span class="icon icon--close-lrg icon--lrg icon--spacing-lrg drop-down-container__active" aria-hidden="true"></span><!--
-        --><span class="drop-down-container__active social-share__trigger__txt">Close</span>
+        <span class="icon icon--share icon--lrg icon--spacing-lrg hide-when-visible" aria-hidden="true"></span><!--
+        --><span class="social-share__trigger__txt hide-when-visible">Share</span><!--
+        --><span class="icon icon--close-lrg icon--lrg icon--spacing-lrg show-when-visible show-when-visible--inline-block" aria-hidden="true"></span><!--
+        --><span class="social-share__trigger__txt show-when-visible show-when-visible--inline-block">Close</span>
       </button>
     </div>
   </div>
