--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -16,7 +16,7 @@
           <% @search.results.each do |kind, results| %>
             <% if results.present? %>
               <li>
-                <a href="#<%= kind %>"><%= kind.titlecase %> (<%= @search.results.stores.length %>)</a>
+                <a href="#<%= kind %>"><%= kind.titlecase %> (<%= results.length %>)</a>
               </li>
             <% end %>
           <% end %>
@@ -28,22 +28,36 @@
   <%#// List of anchors to each search result type %>
 
   <% @search.results.each do |kind, results| %>
-    <section class="divider divider--lrg" aria-labelledby="stores">
+    <section class="divider" aria-labelledby="stores">
       <div class="txt-formatted">
         <h2 id="stores">
           <span class="icon icon--<%= kind %> icon--spacing"></span>
           <%= kind.titlecase %>
         </h2>
-
-        <h3>All <%= kind.pluralize %>  matching "<strong><%= @search.term =%></strong>"</h3>
       </div>
 
       <nav role="navigation">
         <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-base-wrap txt-formatted__list-unstyled">
           <% results.each do |result| %>
+            <% if result.attributes.category.present? %>
             <li>
               <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
             </li>
+            <% end %>
+          <% end %>
+        </ul>
+      </nav>
+
+      <h3>All <%= kind.pluralize %>  matching "<strong><%= @search.term =%></strong>"</h3>
+
+      <nav role="navigation">
+        <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-base-wrap txt-formatted__list-unstyled">
+          <% results.each do |result| %>
+            <% unless result.attributes.category.present? %>
+            <li>
+              <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
+            </li>
+          <% end %>
           <% end %>
         </ul>
       </nav>
