WSF-6287 Restored stores_maps.js.coffee location

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -317,5 +317,5 @@
 </div>
 
 <%- content_for :custom_javascript do -%>
-  <%= javascript_include_tag 'map/stores_maps' %>
+  <%= javascript_include_tag 'stores_maps' %>
 <%- end -%>
