--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -27,57 +27,62 @@
   </div>
   <%#// List of anchors to each search result type %>
   <% @search.results.each do |kind, results| %>
-    <section class="divider" aria-labelledby="<%= kind %>">
+    <section class="divider divider--lrg" aria-labelledby="<%= kind %>">
       <div class="txt-formatted">
         <h2 id="<%= kind %>">
           <span class="icon icon--<%= kind %> icon--spacing"></span>
           <%= kind.titlecase %>
         </h2>
+
+
+        <nav role="navigation" class="mrg-half">
+          <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
+            <% results.each do |result| %>
+              <% if result.attributes.category.present? %>
+                <li>
+                  <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
+                </li>
+              <% end %>
+            <% end %>
+          </ul>
+        </nav>
+
+        <% if kind != 'products' %>
+          <h3>All <%= kind.singularize %> matching "<strong><%= @search.term =%></strong>"</h3>
+
+          <nav role="navigation" class="mrg-half">
+            <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
+              <% results.each do |result| %>
+                <% if result.result_type == 'store' %>
+                <li>
+                  <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
+                </li>
+                <% end %>
+              <% end %>
+            </ul>
+          </nav>
+
+        <% else %>
+          <h3>All brands matching "<strong><%= @search.term =%></strong>"</h3>
+
+          <nav role="navigation" class="mrg-half">
+            <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
+              <% results.each do |result| %>
+                <% if result.result_type == 'product_brand' %>
+                <li>
+                  <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
+                </li>
+                <% end %>
+              <% end %>
+            </ul>
+          </nav>
+
+          <h3 class="mrg-base js-product-results-hdr">All <%= kind.pluralize %> matching "<strong><%= @search.term =%></strong>"</h3>
+
+        <% end %>
       </div>
-
-      <nav role="navigation" class="islet-top">
-        <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
-          <% results.each do |result| %>
-            <% if result.attributes.category.present? %>
-              <li>
-                <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
-              </li>
-            <% end %>
-          <% end %>
-        </ul>
-      </nav>
-
-      <% if kind != 'products' %>
-        <h3>All <%= kind.singularize %> matching "<strong><%= @search.term =%></strong>"</h3>
-
-        <nav role="navigation" class="islet-top">
-          <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
-            <% results.each do |result| %>
-              <% if result.result_type == 'store' %>
-              <li>
-                <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
-              </li>
-              <% end %>
-            <% end %>
-          </ul>
-        </nav>
-      <% else %>
-        <h3>All <%= kind.singularize %> brands matching "<strong><%= @search.term =%></strong>"</h3>
-
-        <nav role="navigation" class="islet-top">
-          <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
-            <% results.each do |result| %>
-              <% if result.result_type == 'product_brand' %>
-              <li>
-                <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
-              </li>
-              <% end %>
-            <% end %>
-          </ul>
-        </nav>
-
+      <% if kind == 'products' %>
         <div class="hide-fully js-product-results-container">
-          <h3>All <%= kind.pluralize %> matching "<strong><%= @search.term =%></strong>"</h3>
           <div class="js-product-results"></div>
         </div>
         <div class="txt-center">
