--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -25,18 +25,19 @@
       <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
     </div>
   </div>
+
+
   <%#// List of anchors to each search result type %>
-  <% @search.results.each do |kind, results| %>
-    <section class="divider divider--lrg" aria-labelledby="<%= kind %>">
+  <% @search.results.each_with_index do |(kind, results), index| %>
+    <section class="<%= 'divider divider--lrg' unless index == @search.results.length - 1 %>" aria-labelledby="<%= kind %>">
       <div class="txt-formatted">
         <h2 id="<%= kind %>">
           <span class="icon icon--<%= kind %> icon--spacing"></span>
           <%= kind.titlecase %>
         </h2>
 
-
-        <nav role="navigation" class="mrg-half">
-          <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
+        <nav role="navigation">
+          <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
             <% results.each do |result| %>
               <% if result.attributes.category.present? %>
                 <li>
@@ -48,10 +49,10 @@
         </nav>
 
         <% if kind != 'products' %>
-          <h3>All <%= kind.singularize %> matching "<strong><%= @search.term =%></strong>"</h3>
+          <h3 class="mrg-base-and-half-top">All <%= kind %> matching "<strong><%= @search.term =%></strong>"</h3>
 
-          <nav role="navigation" class="mrg-half">
-            <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
+          <nav role="navigation">
+            <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
               <% results.each do |result| %>
                 <% if result.result_type == 'store' %>
                 <li>
@@ -63,21 +64,26 @@
           </nav>
 
         <% else %>
-          <h3>All brands matching "<strong><%= @search.term =%></strong>"</h3>
 
-          <nav role="navigation" class="mrg-half">
-            <ul class="horiz-list horiz-list--spacing-base horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
-              <% results.each do |result| %>
-                <% if result.result_type == 'product_brand' %>
-                <li>
-                  <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
-                </li>
+          <%if has_result_type?(results, 'product_brand') %>
+
+            <h3 class="mrg-base-and-half-top">All brands matching "<strong><%= @search.term =%></strong>"</h3>
+
+            <nav role="navigation">
+              <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
+                <% results.each do |result| %>
+                  <% if result.result_type == 'product_brand' %>
+                  <li>
+                    <%= link_to highlight(result[:display], @search.term,  highlighter: '<strong>\1</strong>'), build_url(@centre, kind, result[:attributes]), class: 'btn btn--main btn--main-white btn--main-lrg' %>
+                  </li>
+                  <% end %>
                 <% end %>
-              <% end %>
-            </ul>
-          </nav>
+              </ul>
+            </nav>
 
-          <h3 class="mrg-base js-product-results-hdr">All <%= kind.pluralize %> matching "<strong><%= @search.term =%></strong>"</h3>
+          <% end %>
+
+          <h3 class="mrg-base-and-half-top mrg-base js-product-results-hdr">All <%= kind.pluralize %> matching "<strong><%= @search.term =%></strong>"</h3>
 
         <% end %>
       </div>
@@ -85,8 +91,8 @@
         <div class="hide-fully js-product-results-container">
           <div class="js-product-results"></div>
         </div>
-        <div class="txt-center">
-          <a href="/<%= @centre.code %>/products?search_query=<%= @search.term %>" class="pull-centre">View all products matching <strong><%= @search.term =%></strong></a>
+        <div class="txt-center mrg-dbl-top">
+          <a href="/<%= @centre.code %>/products?search_query=<%= @search.term %>">View all products matching "<strong><%= @search.term =%></strong>"</a>
         </div>
       <% end %>
 
