revert extra store icon class

--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -30,7 +30,7 @@
 /* Set icons */
 
 /* Store */
-.icon--store, .icon--stores:before {content: "\e002";}
+.icon--store:before {content: "\e002";}
 
 /* Products */
 .icon--products:before {content: "\e000";}
