--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -453,11 +453,11 @@
       right: 0;
       overflow-y: auto;
 
+      /* When element contents are not as tall as container */
+      &.is-variable-height {bottom: auto;}
+
       /* Post filter count */
       .is-filter-applied & {@include to-rem(top, 91);}
-
-      /* When element contents are not as tall as container */
-      &.is-variable-height {bottom: auto !important;}
 
       /* Modifier: Listing view */
       .stores-maps__inner--listing & {background-color: #fff;}
@@ -511,6 +511,15 @@
           overflow-y: auto;
           background-color: $color-grey-light-2;
         }
+
+        /* Modifier: Detail view when they're 'featured items' and when 'store hours' are visible */
+        .stores-maps__inner--detail.is-featured-items &,
+        .stores-maps__inner--detail.is-store-hours-visible & {
+          @include to-rem(bottom, $spacing-base);
+        }
+
+        /* When element contents are not as tall as container */
+        .stores-maps__inner--detail &.is-variable-height {bottom: auto;}
       }
 
       /* Non JS users, note: has to come after the mq's */
